--- a/site/views/ingreso.ejs
+++ b/site/views/ingreso.ejs
@@ -6,42 +6,35 @@
 
   <%- include(`./partials/header.ejs`) %>
 
-  <section class="form-register">
-    <h4>¡Conectate!</h4>
-
-    <form action="/user/login" method="POST">
-
-      <% if(typeof errors != 'undefined') { %>
-
-        <ul>
-
-          <% errors.forEach(error =>{ %>
-
+  <main class="container-fluid px-0">
+    <div class="bienvenidx row mx-0 py-2 mainCard">
+      <h3 class="col-9 mb-0">Ingreso</h3>
+    </div>
+    <div class="row vistaProductos mx-0 py-2 mainCard">
+      <form id="formularioLogin" action="/user/login" class="row col-10 m-0 p-0" method="POST">
+        <% if(typeof errors != 'undefined') { %>
+          <ul>
+            <% errors.forEach(error =>{ %>
             <li>
               <%= error.msg %>
             </li>
-
-          <% }) %>
-
-        </ul>
-
-        <% } %>
-
-      <input class="controls" type="email" name="email" placeholder="Ingresá tu correo" required>
-      <input class="controls" type="password" name="password" placeholder="Ingresá tu contraseña" required>
-      <input class="botons" type="submit" value="Ingresar">
-      <input type="checkbox" name="recordar"> <strong>Recordar sesión</strong>
-      <p> ¿No tenés cuenta? <a href="/user/registro"><strong> Crear cuenta </strong></a></p>
-
-      <p class="derechos">Todos los derechos reservados 2020 Insumos Onboard </p>
-
-    </form>
-
-  </section>
+            <% }) %>
+          </ul>
+          <% } %>
+        <span id="errorEmail"></span>
+        <input id="email" class="form-control col-12" type="email" name="email" placeholder="Ingresá tu correo" required>
+        <span id="errorPassword"></span>
+        <input id="password" class="form-control col-12" type="password" name="password" placeholder="Ingresá tu contraseña" required>
+        <button class="btn col-6" type="submit">Ingresar</button><button class="btn col-6 cancelar"><a href="/">Cancelar</a></button>
+        <h3><a href="/user/registro">¿No tenés cuenta?</a></h3>
+      </form>
+    </div>
+  </main>
 
   <%- include(`./partials/footer.ejs`) %>
 
   <%- include(`./partials/scripts.ejs`) %>
+  <script src="/javascripts/login.js"></script>
 
 </body>
 
